<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.users.MainDoctorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_main_doctor_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/welcome_txt"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nurse_list_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/nurse_list_txt"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_main_doctor_txt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/nurse_list"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            android:background="@drawable/bordered_view"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nurse_list_txt" />

        <TextView
            android:id="@+id/doctor_list_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/doctor_list"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nurse_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/doctor_list"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            android:background="@drawable/bordered_view"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctor_list_txt" />

        <TextView
            android:id="@+id/most_earning_doctor_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/most_earning_doctor"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/doctor_list_txt"
            app:layout_constraintTop_toBottomOf="@+id/addDoctorButton" />

        <TextView
            android:id="@+id/name_most_earning_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Хороший Врачев"
            android:textColor="#535353"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/most_earning_doctor_txt"
            app:layout_constraintTop_toBottomOf="@+id/most_earning_doctor_txt" />

        <TextView
            android:id="@+id/least_earning_doctor_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/least_earning_doctor"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/doctor_list_txt"
            app:layout_constraintTop_toBottomOf="@+id/name_most_earning_doctor" />

        <TextView
            android:id="@+id/name_least_earning_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Плохой Врачев"
            android:textColor="#535353"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/most_earning_doctor_txt"
            app:layout_constraintTop_toBottomOf="@+id/least_earning_doctor_txt" />

        <TextView
            android:id="@+id/patient_num_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/patient_number"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/least_earning_doctor_txt"
            app:layout_constraintTop_toBottomOf="@+id/name_least_earning_doctor" />

        <Button
            android:id="@+id/addNurseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#1B811F"
            android:text="Add"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/nurse_list"
            app:layout_constraintTop_toBottomOf="@+id/nurse_list" />

        <Button
            android:id="@+id/addDoctorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#1B811F"
            android:text="Add"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/doctor_list"
            app:layout_constraintTop_toBottomOf="@+id/doctor_list" />

        <TextView
            android:id="@+id/patient_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/patient_num_txt"
            app:layout_constraintTop_toBottomOf="@+id/name_least_earning_doctor" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
